--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,109 +7,10 @@
     android:weightSum="1"
     tools:context="com.bussolalabs.popularmovies.activity.DetailActivity">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Large Text"
-        android:id="@+id/txt_title"
-        android:layout_gravity="center_horizontal"
-        android:minHeight="50dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:gravity="center_vertical|center_horizontal"
-        android:textColor="@android:color/white"
-        android:background="#0d47a1" />
-
-    <RelativeLayout
+    <FrameLayout
+        android:id="@+id/item_detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
-        android:scrollIndicators="right">
-
-        <ScrollView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/scrollView" >
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Medium Text"
-                android:id="@+id/txt_overview"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="0.8"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:layout_marginTop="1dp"
-                android:layout_marginBottom="1dp"
-                android:paddingLeft="2dp"
-                android:paddingRight="3dp" />
-        </ScrollView>
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:gravity="right"
-        android:weightSum="1">
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/lbl_movie_release_date"
-                android:id="@+id/lbl_release_date"
-                android:textColor="@android:color/white"
-                android:background="#0d47a1"
-                android:layout_margin="2dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
-                android:id="@+id/txt_release_date"
-                android:gravity="right"
-                android:layout_margin="2dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="@string/lbl_movie_vote_avg"
-                android:id="@+id/lbl_vote_avg"
-                android:background="#0d47a1"
-                android:textColor="@android:color/white"
-                android:layout_margin="2dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Small Text"
-                android:id="@+id/txt_vote_avg"
-                android:gravity="right"
-                android:layout_margin="2dp" />
-        </LinearLayout>
-
-        <ImageView
-            android:layout_width="130dp"
-            android:layout_height="150dp"
-            android:id="@+id/img_poster"
-            android:layout_margin="2dp" />
-
-    </LinearLayout>
+        android:layout_weight="3" />
 
 </LinearLayout>
